--- a/data/run_files/DISTRIBUTED_cc_net_nmf.yml
+++ b/data/run_files/DISTRIBUTED_cc_net_nmf.yml
@@ -1,4 +1,3 @@
-
 method: cc_net_nmf                    # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
@@ -25,7 +24,7 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          dist_comp  # available methods: serial, parallel, dist_comp
+processing_method:          distribute # available methods: serial, parallel, distribute
                                        # available clusters: AWS, CS Cluster
 
 # ----------------------
