--- a/data/run_files/PARALLEL_cc_net_nmf.yml
+++ b/data/run_files/PARALLEL_cc_net_nmf.yml
@@ -1,5 +1,4 @@
-
-method: cc_net_nmf     # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
+method: cc_net_nmf                    # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
@@ -25,5 +24,5 @@ nmf_penalty_parameter:      1400
 
 top_number_of_genes:        100
 
-processing_method:          parallel  # available methods: serial, parallel, dist_comp
+processing_method:          parallel  # available methods: serial, parallel, distribute
                                       # available clusters: AWS, CS Cluster
