--- a/data/run_files/BENCHMARK_1_SC_nmf.yml
+++ b/data/run_files/BENCHMARK_1_SC_nmf.yml
@@ -2,6 +2,7 @@
 method: nmf                 # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
+phenotype_data_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
 
 results_directory:           ./run_dir/results
 tmp_directory:               ./run_dir/tmp
