--- a/data/run_files/BENCHMARK_2_SC_net_nmf.yml
+++ b/data/run_files/BENCHMARK_2_SC_net_nmf.yml
@@ -1,14 +1,16 @@
 
 method: net_nmf             # Available methods: nmf, cc_nmf, net_nmf, cc_net_nmf
 
-gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 spreadsheet_name_full_path: ../data/spreadsheets/tcga_ucec_somatic_mutation_data.df
+phenotype_data_full_path:   ../data/spreadsheets/UCEC_phenotype.txt
+
+gg_network_name_full_path:  ../data/networks/keg_ST90_4col.edge
 
 results_directory:           ./run_dir/results
 tmp_directory:               ./run_dir/tmp
 
 rwr_max_iterations:         100
-rwr_convergence_tolerence:  1.0e-8
+rwr_convergence_tolerence:  1.0e-4
 rwr_restart_probability:    0.7        # Vn+1 = alpha * N * Vn + (1-alpha) * Vo
 
 number_of_clusters:         3
